# mimir

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/tauri/: README.md  package.json  svelte.config.js  vite.config.js
apps/tauri/src/: app.css
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src/lib/stores/: auth.ts  player.ts
apps/tauri/src/routes/: +layout.svelte  +page.svelte
apps/web/: README.md  mdsvex.config.ts  package.json  svelte.config.js  wrangler.jsonc
apps/web/src/routes/: +layout.svelte  +page.svelte  layout.css
crates/mimir-client/: Cargo.toml
crates/mimir-common/: Cargo.toml
crates/mimir-common/src/: auth.rs  lib.rs  library.rs  session.rs
crates/mimir-core/: .gitignore  Cargo.toml
crates/mimir-core/migrations/: 20260625143404_init_schema.sql  20260630084709_session_sync.sql
crates/mimir-core/src/: error.rs  main.rs
crates/mimir-core/src/api/: auth.rs  ebook.rs  libraries.rs  mod.rs  session.rs  status.rs  stream.rs
crates/mimir-core/src/auth/: extractor.rs  jwt.rs  password.rs
crates/mimir-core/src/db/: audio_files.rs  ebook_files.rs  libraries.rs  library_folders.rs  library_items.rs  mod.rs  session.rs  users.rs
crates/mimir-core/src/db/models/: audio_file.rs  author.rs  book.rs  ebook_file.rs  library.rs  library_folder.rs  library_item.rs  media_progress.rs  mod.rs  playback_session.rs  user.rs
crates/mimir-core/src/scanner/: discover.rs  file_types.rs  mod.rs
(+38 files in other folders)
