[package]
name = "mimir-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
mimir-common = { path = "../mimir-common" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
lofty = "0.24.0"
walkdir = "2.5.0"
